@@ -27,6 +27,8 @@ Version 1.11.0-svn:
      {SOUND:POISON} macros, and several macros from animation-utils2.cfg are used
      (see bug #19274)
    * Restart is no longer required to toggle desktop notifications
+   * Display the savegame version when warning the user about unsupported or
+     mismatched versions (bug #7243)
 
 Version 1.10.0:
  * Campaigns:
